--- a/ui/src/app/views/settings/workflow-template/form/workflow-template.form.html
+++ b/ui/src/app/views/settings/workflow-template/form/workflow-template.form.html
@@ -215,20 +215,16 @@
             </nz-row>
         </ng-container>
         <nz-row *ngIf="workflowTemplate.editable" class="subItem">
-            <nz-col [nzSpan]="5" [nzOffset]="19">
-                <nz-form-item nzJustify="end">
-                    <div>
-                        <button  *ngIf="mode === 'edit'" nz-button nzDanger nzType="primary" [nzLoading]="loading"
-                                 nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this template ?"
-                                 (nzOnConfirm)="clickDelete()"><i nz-icon nzType="delete" nzTheme="outline"></i>Delete</button>
-                        <button nz-button nzType="primary" [nzLoading]="loading" (click)="clickSave()">
-                            <i nz-icon nzType="save" nzTheme="outline"></i>Save
-                        </button>
-                    </div>
-                </nz-form-item>
+            <nz-col [nzSpan]="24">
+                <button nz-button nzType="primary" class="floatRight" [nzLoading]="loading" (click)="clickSave()">
+                    <i nz-icon nzType="save" nzTheme="outline"></i>Save
+                </button>
+                <button  *ngIf="mode === 'edit'" class="floatRight" nz-button nzDanger nzType="primary" [nzLoading]="loading"
+                                 nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this template ?" (nzOnConfirm)="clickDelete()">
+                    <i nz-icon nzType="delete" nzTheme="outline"></i>Delete
+                </button>
             </nz-col>
         </nz-row>
-
     </form>
 </ng-template>
 <ng-template #loadWorkflowTemplate>
