--- a/ui/src/app/shared/favorite-cards/favorite-cards.component.html
+++ b/ui/src/app/shared/favorite-cards/favorite-cards.component.html
@@ -43,11 +43,11 @@
                 <ng-container [ngSwitch]="favorite.type">
                     <ng-container *ngSwitchCase="'workflow'">
                         <i class="share alternate icon" *ngIf="!favorite.icon"></i>
-                        <img width="32" [src]="favorite.icon" *ngIf="favorite.icon">
+                        <img width="32" [src]="favorite.icon" *ngIf="favorite.icon" alt="workflow logo">
                     </ng-container>
                     <ng-container *ngSwitchDefault>
                         <i class="browser icon" *ngIf="!favorite.icon"></i>
-                        <img  width="32" [src]="favorite.icon" *ngIf="favorite.icon">
+                        <img  width="32" [src]="favorite.icon" *ngIf="favorite.icon" alt="project logo">
                     </ng-container>
                 </ng-container>
             </ng-template>
