--- a/ui/src/app/views/workflow/add/workflow.add.scss
+++ b/ui/src/app/views/workflow/add/workflow.add.scss
@@ -6,23 +6,38 @@
   align-content: stretch;
   height: 100%;
 
+  .nzSegment {
+    padding: 10px;
+  }
+
   h2 {
     text-align: center;
   }
 
-  .red {
-    color: #9F3A38;
+  nz-row {
+    margin-top: 10px;
   }
 
-  .ui.active.inline.loader {
-    margin-right: 5px;
+  nz-button-group {
+    width: 100%;
+    text-align: center;
+
+    button {
+      width: 300px;
+    }
   }
 
-  .mt5 {
-    margin-top: 5px;
+  nz-form-item.alignCenter {
+    text-align: center;
   }
 
-  .resync {
-    margin-top: 1.6em;
+  nz-form-item.alignRight {
+    text-align: right;
+    button {
+      margin-left: 10px;
+    }
+  }
+  hr {
+    margin-bottom: 20px;
   }
 }
